--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eu vi a verdade</title>
-    <link rel="stylesheet" href="/estilos/style.css">
-    <link rel="stylesheet" href="/estilos/mediaHOMEPAGE.css">
+    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/mediaHOMEPAGE.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body onresize="mudouTamanho">
@@ -14,44 +14,44 @@
         menu
         </span>
 
-        <div id="eye"><a href="/html-central/index.html" target="_blank"><img src="/imagens/white eye small.png" alt="" id="eye"></a></div>
+        <div id="eye"><a href="index.html" target="_blank"><img src="/imagens/white eye small.png" alt="" id="eye"></a></div>
 
       
         <div id="nav2">
-            <a href="/html-central/index.html" class="menu" target="_blank">PÁGINA INICIAL</a>
-            <a href="/html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
-            <a href="/html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
+            <a href="index.html" class="menu" target="_blank">PÁGINA INICIAL</a>
+            <a href="html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
+            <a href="html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
         </div>
     <nav id="itens">
         <a href="index.html" class="menu" target="_blank">PÁGiNA INICIAL</a>
-        <a href="noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
-        <a href="artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
+        <a href="html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
+        <a href="html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
     </nav>
     <h1>Eu vi a verdade</h1>
     <main>
        <div id="noticia1">
            <picture>
-            <source media="(max-width: 633px )" srcset="/imagens/mulheresestaosendoCELL.jpg" type="image/jpg">
-            <a href="/noticias/noticia01.html"><img src="/imagens/pexels-joão-jesus-tamanho2.jpg" alt="Mulher no escuro"></a>
+            <source media="(max-width: 633px )" srcset="imagens/mulheresestaosendoCELL" type="image/jpg">
+            <a href="noticias/noticia01.html"><img src="imagens/pexels-joão-jesus-tamanho2.jpg" alt="Mulher no escuro"></a>
            </picture>
 
            <div id="caixa">
 
                <h3>Notícias</h3>
                <h1>Mulheres estão sendo forçadas a abortar</h1>
-               <p><a href="/noticias/noticia01.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum iusto minima earum repellendus deserunt velit maiores a esse ipsam ad. Explicabo nostrum, ea repellat reiciendis numquam soluta voluptates mollitia blanditiis!</a></p>
+               <p><a href="noticias/noticia01.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum iusto minima earum repellendus deserunt velit maiores a esse ipsam ad. Explicabo nostrum, ea repellat reiciendis numquam soluta voluptates mollitia blanditiis!</a></p>
                <p class="autor"> Escrito por aliquies &nbsp; &nbsp;🕜 Agosto 8,2022</p>
            </div>
        </div>
        <div id="noticia1">
         <picture>
-            <source media="(max-width: 633px )" srcset="/imagens/mulheresestaosendoCELL.jpg" type="image/jpg">
-            <a href="/noticias/noticia01.html"><img src="/imagens/pexels-joão-jesus-tamanho2.jpg" alt="Mulher no escuro"></a>
+            <source media="(max-width: 633px )" srcset="imagens/mulheresestaosendoCELL.jpg" type="image/jpg">
+            <a href="noticias/noticia01.html"><img src="imagens/pexels-joão-jesus-tamanho2.jpg" alt="Mulher no escuro"></a>
            </picture>
         <div id="caixa">
             <h3>Notícias</h3>
             <h1>Mulheres preferem os homens mais altos</h1>
-            <p><a href="/noticias/noticia01.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ducimus quasi, tempore nemo quisquam reiciendis! Iste magni dicta labore sunt, laudantium autem quod illo, amet quae, ducimus accusantium ut veritatis?</a></p>
+            <p><a href="noticias/noticia01.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ducimus quasi, tempore nemo quisquam reiciendis! Iste magni dicta labore sunt, laudantium autem quod illo, amet quae, ducimus accusantium ut veritatis?</a></p>
             <p class="autor">Escrito por aliquies &nbsp; &nbsp;🕜 Agosto 8,2022</p>
         </div>
        </div>
@@ -59,10 +59,10 @@
     <footer>
         <div id="redes_sociais">
             <p>S <br> H <br> A <br> R <br> E </p><hr>
-            <a href=""> <img src="/imagens/icones/instagram.png" alt="icone do instagram"></a>
-            <a href=""> <img src="/imagens/icones/telegram.png" alt="icone do telegram"></a>
-            <a href=""> <img src="/imagens/icones/twitter002.png" alt="icone do twitter"></a>
-            <a href=""> <img src="/imagens/icones/YouTube.png" alt="icone do YouTube"></a>
+            <a href=""> <img src="imagens/icones/instagram.png" alt="icone do instagram"></a>
+            <a href=""> <img src="imagens/icones/telegram.png" alt="icone do telegram"></a>
+            <a href=""> <img src="imagens/icones/twitter002.png" alt="icone do twitter"></a>
+            <a href=""> <img src="imagens/icones/YouTube.png" alt="icone do YouTube"></a>
         </div>
     </footer>
    
