--- a/html-central/artigos-page.html
+++ b/html-central/artigos-page.html
@@ -16,14 +16,14 @@
         <div id="eye"><a href="index.html" target="_blank"><img src="/imagens/white eye small.png" alt="" id="eye"></a></div>
 
         <div id="nav2">
-            <a href="index.html" class="menu" target="_blank">PÁGiNA INICIAL</a>
-            <a href="noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
-            <a href="artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
+            <a href="/index.html" class="menu" target="_blank">PÁGiNA INICIAL</a>
+            <a href="/html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
+            <a href="/html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
         </div>
     <nav id="itens">
-        <a href="index.html" class="menu" target="_blank">PÁGINA INICIAL</a>
-        <a href="noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
-        <a href="artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
+        <a href="/index.html" class="menu" target="_blank">PÁGINA INICIAL</a>
+        <a href="/html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
+        <a href="/html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
     </nav> 
     <h1>ARTIGOS</h1>
     <main>
