--- a/noticias/noticia01.html
+++ b/noticias/noticia01.html
@@ -15,10 +15,10 @@
         menu
         </span>
 
-        <div id="eye"><a href="/html-central/index.html" target="_blank"><img src="/imagens/white eye small.png" alt="" id="eye"></a></div>
+        <div id="eye"><a href="/index.html" target="_blank"><img src="/imagens/white eye small.png" alt="" id="eye"></a></div>
 
         <div id="nav2">
-            <a href="/html-central/index.html" class="menu" target="_blank">PÁGINA INICIAL</a>
+            <a href="/index.html" class="menu" target="_blank">PÁGINA INICIAL</a>
             <a href="/html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
             <a href="/html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
         </div>
