--- a/html-central/artigos-page.html
+++ b/html-central/artigos-page.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artigos</title>
-    <link rel="stylesheet" href="/estilos/artigos.css">
-    <link rel="stylesheet" href="/estilos/mediaHomenotices.css">
+    <link rel="stylesheet" href="../estilos/artigos.css">
+    <link rel="stylesheet" href="../estilos/mediaHomenotices.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body onresize="mudouTamanho">
@@ -16,21 +16,21 @@
         <div id="eye"><a href="index.html" target="_blank"><img src="/imagens/white eye small.png" alt="" id="eye"></a></div>
 
         <div id="nav2">
-            <a href="/index.html" class="menu" target="_blank">PÁGiNA INICIAL</a>
-            <a href="/html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
-            <a href="/html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
+            <a href="../index.html" class="menu" target="_blank">PÁGiNA INICIAL</a>
+            <a href="../html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
+            <a href="../html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
         </div>
     <nav id="itens">
-        <a href="/index.html" class="menu" target="_blank">PÁGINA INICIAL</a>
-        <a href="/html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
-        <a href="/html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
+        <a href="../index.html" class="menu" target="_blank">PÁGINA INICIAL</a>
+        <a href="../html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
+        <a href="../html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
     </nav> 
     <h1>ARTIGOS</h1>
     <main>
         <div id="notícias">
             <picture>
-                <source media="(max-width:833px )" srcset="/imagens/imagemsecretaCELL.jpg" type="image/jpg">
-                <img src="/imagens/secret-3051576.jpg" alt="">
+                <source media="(max-width:833px )" srcset="../imagens/imagemsecretaCELL.jpg" type="image/jpg">
+                <img src="../imagens/secret-3051576.jpg" alt="">
             </picture>
         </div>
         <div id="caixa">
