--- a/html-central/noticiaspage.html
+++ b/html-central/noticiaspage.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noticias</title>
-    <link rel="stylesheet" href="/estilos/artigos.css">
-    <link rel="stylesheet" href="/estilos/mediaHomenotices.css">
+    <link rel="stylesheet" href="../estilos/artigos.css">
+    <link rel="stylesheet" href="../estilos/mediaHomenotices.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body onresize="mudouTamanho">
@@ -14,17 +14,17 @@
         menu
         </span>
 
-        <div id="eye"><a href="/index.html" target="_blank"><img src="/imagens/white eye small.png" alt="" id="eye"></a></div>
+        <div id="eye"><a href="../index.html" target="_blank"><img src="/imagens/white eye small.png" alt="" id="eye"></a></div>
         <div id="nav2">
-            <a href="/index.html" class="menu" target="_blank">PÁGiNA INICIAL</a>
-            <a href="/html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
-            <a href="/html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
+            <a href="../index.html" class="menu" target="_blank">PÁGiNA INICIAL</a>
+            <a href="../html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
+            <a href="../html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
         </div>
         
     <nav id="itens">
-        <a href="/index.html" class="menu" target="_blank">PÁGINA INICIAL</a>
-        <a href="/html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
-        <a href="/html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
+        <a href="../index.html" class="menu" target="_blank">PÁGINA INICIAL</a>
+        <a href="../html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
+        <a href="../html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
     </nav>
 
     <h1>NOTÍCIAS</h1>
@@ -32,15 +32,15 @@
         <div id="notícias">
             <picture>
                 <source media="(max-width: 833px )" srcset="/imagens/mulheresestaosendoCELL.jpg" type="image/jpg">
-                <img src="/imagens/mulheresestaosendo.jpg" alt="">
+                <img src="../imagens/mulheresestaosendo.jpg" alt="">
             </picture>
         </div>
         <div id="caixa">
             <h3>NOTÍCIAS E ANALISES</h3>
             <div id="decor">
-                <h1><a href="/noticias/noticia01.html">Mulheres estão sendo obrigadas a abortarem</a></h1>
+                <h1><a href="../noticias/noticia01.html">Mulheres estão sendo obrigadas a abortarem</a></h1>
             </div>
-            <p><a href="/noticias/noticia01.html"> culpa fugiat, vero quis quibusdam. Provident eos architecto aliquid dolores odio officia, rem omnis consectetur.</a></p>
+            <p><a href="../noticias/noticia01.html"> culpa fugiat, vero quis quibusdam. Provident eos architecto aliquid dolores odio officia, rem omnis consectetur.</a></p>
             <div id="autor">
                 <p> Escrito por aliquies &nbsp; &nbsp;🕜 Agosto 8,2022</p>
             </div>
