--- a/noticias/noticia01.html
+++ b/noticias/noticia01.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>As_mulheres_estão_sendo_obrigadas_a_abortarem/notícias</title>
-    <link rel="stylesheet" href="/estilos/notícias.css">
-    <link rel="stylesheet" href="/estilos/mediaquerynotices.css">
+    <link rel="stylesheet" href="../estilos/notícias.css">
+    <link rel="stylesheet" href="../estilos/mediaquerynotices.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body onresize="mudouTamanho">
@@ -15,17 +15,17 @@
         menu
         </span>
 
-        <div id="eye"><a href="/index.html" target="_blank"><img src="/imagens/white eye small.png" alt="" id="eye"></a></div>
+        <div id="eye"><a href="../index.html" target="_blank"><img src="/imagens/white eye small.png" alt="" id="eye"></a></div>
 
         <div id="nav2">
-            <a href="/index.html" class="menu" target="_blank">PÁGINA INICIAL</a>
-            <a href="/html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
-            <a href="/html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
+            <a href="../index.html" class="menu" target="_blank">PÁGINA INICIAL</a>
+            <a href="../html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
+            <a href="../html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
         </div>
     <nav id="itens">
-        <a href="/html-central/index.html" class="menu" target="_blank">MENU PRINCIPAL</a>
-        <a href="/html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
-        <a href="/html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
+        <a href="../html-central/index.html" class="menu" target="_blank">MENU PRINCIPAL</a>
+        <a href="../html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
+        <a href="../html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
     </nav>    
 
     <main>
@@ -46,22 +46,22 @@
     <footer>
         <div id="extra">
             <div class="box">
-                <p><img src="/imagens/imagemsecreta-small.jpg" alt="">
+                <p><img src="../imagens/imagemsecreta-small.jpg" alt="">
                 <h2><a href="">segredos não revelados pela cia</a></h2>
                 <p><a href="">Este titulo é evidentimente ironico, pelo o fato de que a cia, sim, revela seus segredos após 50 anos</a></p>
             </div>
             <div class="box1">
-                <img src="/imagens/imagemmulher-small.jpg" alt=""></p>
+                <img src="../imagens/imagemmulher-small.jpg" alt=""></p>
                 <h2><a href="">Mulheres preferem homens altos</a></h2>
                 <p><a href="">é constatado por homens e ciêntistas que mulheres realmente preferem homens altos</a></p>
             </div>
         </div>
         <div id="redes_sociais">
             <p>S <br> H <br> A <br> R <br> E</p> <hr>
-            <a href=""> <img src="/imagens/icones/instagram.png" alt=""></a>
-            <a href=""> <img src="/imagens/icones/telegram.png" alt=""></a>
-            <a href=""> <img src="/imagens/icones/twitter002.png" alt=""></a>
-            <a href=""> <img src="/imagens/icones/YouTube.png" alt=""></a>
+            <a href=""> <img src=".../imagens/icones/instagram.png" alt=""></a>
+            <a href=""> <img src=".../imagens/icones/telegram.png" alt=""></a>
+            <a href=""> <img src=".../imagens/icones/twitter002.png" alt=""></a>
+            <a href=""> <img src=".../imagens/icones/YouTube.png" alt=""></a>
         </div>
     </footer>
 
