--- a/noticias/noticia01.html
+++ b/noticias/noticia01.html
@@ -58,10 +58,10 @@
         </div>
         <div id="redes_sociais">
             <p>S <br> H <br> A <br> R <br> E</p> <hr>
-            <a href=""> <img src=".../imagens/icones/instagram.png" alt=""></a>
-            <a href=""> <img src=".../imagens/icones/telegram.png" alt=""></a>
-            <a href=""> <img src=".../imagens/icones/twitter002.png" alt=""></a>
-            <a href=""> <img src=".../imagens/icones/YouTube.png" alt=""></a>
+            <a href=""> <img src="../imagens/icones/instagram.png" alt=""></a>
+            <a href=""> <img src="../imagens/icones/telegram.png" alt=""></a>
+            <a href=""> <img src="../imagens/icones/twitter002.png" alt=""></a>
+            <a href=""> <img src="../imagens/icones/YouTube.png" alt=""></a>
         </div>
     </footer>
 
