--- a/html-central/noticiaspage.html
+++ b/html-central/noticiaspage.html
@@ -14,7 +14,7 @@
         menu
         </span>
 
-        <div id="eye"><a href="../index.html" target="_blank"><img src="/imagens/white eye small.png" alt="" id="eye"></a></div>
+        <div id="eye"><a href="../index.html" target="_blank"><img src="../imagens/white eye small.png" alt="" id="eye"></a></div>
         <div id="nav2">
             <a href="../index.html" class="menu" target="_blank">PÁGiNA INICIAL</a>
             <a href="../html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
@@ -31,7 +31,7 @@
     <main>
         <div id="notícias">
             <picture>
-                <source media="(max-width: 833px )" srcset="/imagens/mulheresestaosendoCELL.jpg" type="image/jpg">
+                <source media="(max-width: 833px )" srcset="../imagens/mulheresestaosendoCELL.jpg" type="image/jpg">
                 <img src="../imagens/mulheresestaosendo.jpg" alt="">
             </picture>
         </div>
