--- a/noticias/noticia01.html
+++ b/noticias/noticia01.html
@@ -15,7 +15,7 @@
         menu
         </span>
 
-        <div id="eye"><a href="../index.html" target="_blank"><img src="/imagens/white eye small.png" alt="" id="eye"></a></div>
+        <div id="eye"><a href="../index.html" target="_blank"><img src="../imagens/white eye small.png" alt="" id="eye"></a></div>
 
         <div id="nav2">
             <a href="../index.html" class="menu" target="_blank">PÁGINA INICIAL</a>
