--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         menu
         </span>
 
-        <div id="eye"><a href="index.html" target="_blank"><img src="/imagens/white eye small.png" alt="" id="eye"></a></div>
+        <div id="eye"><a href="index.html" target="_blank"><img src="imagens/white eye small.png" alt="" id="eye"></a></div>
 
       
         <div id="nav2">
@@ -59,10 +59,10 @@
     <footer>
         <div id="redes_sociais">
             <p>S <br> H <br> A <br> R <br> E </p><hr>
-            <a href=""> <img src="imagens/icones/instagram.png" alt="icone do instagram"></a>
-            <a href=""> <img src="imagens/icones/telegram.png" alt="icone do telegram"></a>
+            <a href="https://www.instagram.com/"> <img src="imagens/icones/instagram.png" alt="icone do instagram"></a>
+            <a href="https://t.me/Harmoniadosaber1"> <img src="imagens/icones/telegram.png" alt="icone do telegram"></a>
             <a href=""> <img src="imagens/icones/twitter002.png" alt="icone do twitter"></a>
-            <a href=""> <img src="imagens/icones/YouTube.png" alt="icone do YouTube"></a>
+            <a href="https://youtube.com/channel/UCkdr-Oy_O2qOBiw8du6q42w"> <img src="imagens/icones/YouTube.png" alt="icone do YouTube"></a>
         </div>
     </footer>
    
