--- a/noticias/noticia01.html
+++ b/noticias/noticia01.html
@@ -32,7 +32,7 @@
         <div id="img"></div>
         
             <div id="caixa">
-                    <p><a href="#" id="bottom">NOTÍCIAS</a></p>
+                    <p><a href="../html-central/noticiaspage.html" id="bottom">NOTÍCIAS</a></p>
                     <h1>As mulheres estão sendo obrigadas a abortarem</h1>
                     <p>Por aliquies  &nbsp; &nbsp;🕜 Agosto 8,2022</p>
                 <div class="texto">
@@ -58,10 +58,10 @@
         </div>
         <div id="redes_sociais">
             <p>S <br> H <br> A <br> R <br> E</p> <hr>
-            <a href=""> <img src="../imagens/icones/instagram.png" alt=""></a>
-            <a href=""> <img src="../imagens/icones/telegram.png" alt=""></a>
+            <a href="https://www.instagram.com/"> <img src="../imagens/icones/instagram.png" alt=""></a>
+            <a href="https://t.me/Harmoniadosaber1"> <img src="../imagens/icones/telegram.png" alt=""></a>
             <a href=""> <img src="../imagens/icones/twitter002.png" alt=""></a>
-            <a href=""> <img src="../imagens/icones/YouTube.png" alt=""></a>
+            <a href="https://youtube.com/channel/UCkdr-Oy_O2qOBiw8du6q42w"> <img src="../imagens/icones/YouTube.png" alt=""></a>
         </div>
     </footer>
 
