--- a/noticias/noticia01.html
+++ b/noticias/noticia01.html
@@ -23,7 +23,7 @@
             <a href="../html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
         </div>
     <nav id="itens">
-        <a href="../html-central/index.html" class="menu" target="_blank">MENU PRINCIPAL</a>
+        <a href="../index.html" class="menu" target="_blank">MENU PRINCIPAL</a>
         <a href="../html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
         <a href="../html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
     </nav>    
