--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
         </div>
     <nav id="itens">
-        <a href="index.html" class="menu" target="_blank">PÁGiNA INICIAL</a>
+        <a href="index.html" class="menu" target="_blank">PÁGINA INICIAL</a>
         <a href="html-central/noticiaspage.html" class="menu" target="_blank">NOTÍCIAS</a>
         <a href="html-central/artigos-page.html" class="menu" target="_blank">ARTIGOS</a>
     </nav>
