--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
            </picture>
 
            <div id="caixa">
-
-               <h3>Notícias</h3>
+                
+               <h3>Notíciasss</h3>
                <h1>Mulheres estão sendo forçadas a abortar</h1>
                <p><a href="noticias/noticia01.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum iusto minima earum repellendus deserunt velit maiores a esse ipsam ad. Explicabo nostrum, ea repellat reiciendis numquam soluta voluptates mollitia blanditiis!</a></p>
                <p class="autor"> Escrito por aliquies &nbsp; &nbsp;🕜 Agosto 8,2022</p>
